--- a/src/app/game/component/game/game.component.css
+++ b/src/app/game/component/game/game.component.css
@@ -20,6 +20,7 @@
 
 .grid-container {
     margin: 20px;
+    text-align: center;
     
   }
   
@@ -58,9 +59,7 @@
     padding: 10px 16px;
     line-height: 1.33;
     border-radius: 35px;
-    margin-right: 20px;
-    margin-left: 50px;
-    margin-top: 30px;
+    
     -webkit-border-radius: 35px;
     -moz-border-radius: 35px;
     -ms-border-radius: 35px;
@@ -69,7 +68,7 @@
 
 .container {
     height: 200px;
-    position: relative;
+    
     
     
   }
@@ -87,4 +86,20 @@
     margin-right: 20px;
     margin-left: 50px;
     letter-spacing:0.3em;
+}
+
+.h1{
+  color: blue;
+  font-weight: 700;
+}
+
+.h2{
+  color: black;
+  font-size: 35px;
+  font-weight: 600;
+  align-items: center; 
+  justify-content: center;
+}
+.h5{
+
 }
