--- a/src/app/game/component/game/game.component.html
+++ b/src/app/game/component/game/game.component.html
@@ -112,7 +112,7 @@
         <br>
         <br>
         
-        <button type="button" class="btn btn-success" (click)="modal.close(); reiniarJuego()">CONTINUAR</button>
+        <button type="button" class="btn btn-primary btn-lg buttonR" (click)="modal.close(); reiniarJuego()">CONTINUAR</button>
         <br>
         <br>
     </div>
