--- a/src/app/game/component/game/game.component.html
+++ b/src/app/game/component/game/game.component.html
@@ -15,7 +15,7 @@
         <br>
         <br>
         <br>
-        <p align="center">{{texto.title}}  <span [style.color]="color.color">{{color.title}} </span> </p>
+        <p align="center" style="line-height : 40px;">  {{texto.title}}  <span [style.color]="color.color">{{color.title}} </span> </p>
         <br>
         <br>
      
@@ -28,6 +28,7 @@
                 </div>
                                
             </div>
+            
             <div class="row" style="justify-content: center; margin:0 auto; margin-top: 15px ;" *ngIf="selecciono">
                 <div class="col col-lg-1">
                     <div *ngIf="selecciono1">
@@ -112,7 +113,7 @@
         <br>
         <br>
         
-        <button type="button" class="btn btn-primary btn-lg buttonR" (click)="modal.close(); reiniarJuego()">CONTINUAR</button>
+        <button type="button" class="btn btn-primary btn-lg mx-4" (click)="modal.close(); reiniarJuego()">CONTINUAR</button>
         <br>
         <br>
     </div>
